2010-06-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Treat SIGHUP and SIGTERM signal as emergency shutdown because they
	are usually issued by system or other process.
	* src/MultiUrlRequestInfo.cc

2010-06-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use downloadresultcode::IN_PROGRESS for
	RequestGroup::SHUTDOWN_SIGNAL.
	* src/RequestGroup.cc

2010-06-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call requestForceHalt() instead of _requestGroupMan->forceHalt().
	* src/DownloadEngine.cc

2010-06-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Mentioned RFC 5854 in README and man page.
	* README
	* doc/aria2c.1.txt

2010-06-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.9.4
	* configure.ac
	* doc/aria2c.1.txt

2010-06-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't throw exception when Metalink document is empty(no file
	element).  It is a valid Metalink document anyway.
	* src/MetalinkHelper.cc
	* src/download_helper.cc

2010-06-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed double memory free when Exception raised from
	AbstractCommand::prepareForNextAction() called by
	HttpResponseCommand::handleDefaultEncoding().
	* src/AbstractCommand.cc
	* src/HttpResponseCommand.cc

2010-06-01  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added _logger->info() guard
	* src/IteratableChunkChecksumValidator.cc

2010-05-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that feeding Metalink XML via pipe (-M- option) does
	not work when aria2 is built with expat. Fixed the bug that when
	Metalink XML is fed via pipe and --save-session is used, entry
	"/dev/stdin" is saved in session file.
	* src/ExpatMetalinkProcessor.cc
	* src/ExpatMetalinkProcessor.h
	* src/Metalink2RequestGroup.cc

2010-05-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc
	* src/aria2c.1.txt
